Fixed dark mode, moved NEW! tag

--- a/html/css/dark.css
+++ b/html/css/dark.css
@@ -60,3 +60,7 @@ md-datepicker {
 .md-datepicker-input {
 	color: white;
 }
+
+.logviewer-user-row.even {
+	background-color: #1E1E1E;
+}
